--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Hello! Wow!</title>
+    <title>Infection Annihiliation!</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,59 +22,74 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Your game title</h2>
+<h2>Infection Annihilation</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-A one-sentence summary of your game.
+This game is Infection Annihilation a shooter where you destroy infectious robots in a body
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-What experience do you want players to have when playing your game?
+There should be a determined experience when people play this game. You only get one life so that should
+get a faster and intenser feel when you play. Also the game is based around saving someones life so if you
+immerse yourself you can feel a sense of releif if you make it or sad if you lose and the body dies.
 </li>
 
 <li><strong>Genre:</strong>
-A single sentence that places the game within a game genre or a hybrid of genres.
+arcade shooter
 </li>
 
 <li><strong>Game play:</strong>
-A paragraph describing the actions the player can perform, the system dynamics, and the core mechanic. Include a concise explanation of the prototype’s inputs and their expected effects (how to play). You can also describe game play that is not in the prototype. You may include mock-up images for parts of the game not in the prototype.
+The base mechanics to Infection Annihilation is shooting and moving. You want to destroy the enemy mini bots that are inside this body
+to do that you must shoot them while moving to dodge their fire. You use the arrow keys to move left and right since there is no action to move
+up and back(as of yet). That would add a compeltely new addition to the game if that were to happen. You get a score depending on how much of the
+body you end up saving so you wanna destroy as many as you can so you get the best score.
 </li>
 
 <li><strong>Prototype goal:</strong>
-What game mechanic is this prototype evaluating?
+this prototype is evaluating the movement mechanics and the shooting mechanics
 </li>
 
 <li><strong>Features:</strong>
-What are the unique aspects of your game that set it apart?
+I think the theme sets my game apart from the rest. Anyone can have an arcade shooter but an arcade shooter that is basically
+inside a person and using not spaceships but mini bots.
 </li>
 
 <li><strong>Setting/Premise:</strong>
-A paragraph about the world your game is set in and who the characters are. What makes the game world and its occupants unique and interesting? Do the tokens represent something? If the game has a backstory, put it here. If the game is abstract, then say so.
+Theres basically two main characters and 1 generic character. They main characters are you who is the agent inside the
+mini bot and the president who you are inside of trying to save. I think this setting is different and hopefully thats a 
+good thing. The generic character is the enemies inside the other ships who are trying to kill you.
+The game world is unique becauase its not in space or on a planet but inside a human being.
 </li>
 
 <li><strong>Story:</strong>
-If the game has a story, summarize it in a paragraph. How will the dramatic tension interact with the gameplay tension?
+The war rages on between all the countries on earth and after a assassination attempt on the US President by a russian assassin
+the president has been infected with a syringe full of not a virus or poison but hundreds of nanobot ships with pilots shooting
+small electric charges. They are going for the presidents heart and trying to shock it into cardiac arrest. You have been chosen
+to go in and stop them from reaching the heart at any cost. The president was injected in the calf so the scientists have cut off
+blood flow to slow them down and are going to shrink you down so you can man the SCOOTY PUFF JUNIOR and inject you straight into
+his chest. This ship has the firepower to destroy any enemy ship but is also fragile itself so one hit and you are done. Gods Speed.
 </li>
 
 <li><strong>Target Audience:</strong>
-A single sentence that describes the demographic you're trying to reach.
+The demographic is honestly anyone that appeals to arcade shooters and or secret missions
 </li>
 
 <li><strong>Play time:</strong>
-How long does your game take to play?
+1-2 mins tops
 </li>
 
 <li><strong>Strategies:</strong>
-What player strategies do you expect will be effective at playing this game?
+until i implement the movement of up and back as well as left to right the only strategy is to dodge left and right and inbetween dodges shoot the enemy
 </li>
 
 <li><strong>Prototype Assets:</strong>
-Did you make your prototype assets from scratch? Did you borrow them? Cite your sources here.
+I borrowed some from the example assets on the phaser site and others on devinart and some made myself
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-Which other game most closely resembles your game? If you are borrowing from a Phaser Example, you must say so here.
+My game most represents the invaders example on phaser. I used the same framework for enemy movement but changed assets
+and lives system, etc.
 </li>
 
 </ul>
