--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Infection Annihiliation!</title>
+    <title>Cyber Surfing</title>
     <script src="js/phaser.js"></script>
     <script src="js/main.js"></script>
 
@@ -22,37 +22,35 @@ body
 <body>
 <div id="game"></div>
 <div id="readme">
-<h2>Infection Annihilation</h2>
+<h2>Cyber Surfing</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-This game is Infection Annihilation a shooter where you destroy infectious robots in a body
+This game is Cyber Surfing, try to collect all the bits of data 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
 There should be a determined experience when people play this game. You only get one life so that should
-get a faster and intenser feel when you play. Also the game is based around saving someones life so if you
-immerse yourself you can feel a sense of releif if you make it or sad if you lose and the body dies.
+get a faster and intenser feel when you play. Also the game is based around collecting a large amount of 
+items so you want to get as many as possible.
 </li>
 
 <li><strong>Genre:</strong>
-arcade shooter
+arcade collector 
 </li>
 
 <li><strong>Game play:</strong>
-The base mechanics to Infection Annihilation is shooting and moving. You want to destroy the enemy mini bots that are inside this body
-to do that you must shoot them while moving to dodge their fire. You use the arrow keys to move left and right since there is no action to move
-up and back(as of yet). That would add a compeltely new addition to the game if that were to happen. You get a score depending on how much of the
-body you end up saving so you wanna destroy as many as you can so you get the best score.
+The base mechanics of Cyber Surfing is moving. You want to collect as many of the data bits as possible.
+Once you collect one another will appear somewhere else on the board.
 </li>
 
 <li><strong>Prototype goal:</strong>
-this prototype is evaluating the movement mechanics and the shooting mechanics
+this prototype is evaluating the movement mechanics and the random placement of items
 </li>
 
 <li><strong>Features:</strong>
-I think the theme sets my game apart from the rest. Anyone can have an arcade shooter but an arcade shooter that is basically
-inside a person and using not spaceships but mini bots.
+I think the theme sets my game apart from the rest. Anyone can have an arcade game that collects items
+but changing the theme to cyber space gives it a different edge.
 </li>
 
 <li><strong>Setting/Premise:</strong>
@@ -63,33 +61,31 @@ The game world is unique becauase its not in space or on a planet but inside a h
 </li>
 
 <li><strong>Story:</strong>
-The war rages on between all the countries on earth and after a assassination attempt on the US President by a russian assassin
-the president has been infected with a syringe full of not a virus or poison but hundreds of nanobot ships with pilots shooting
-small electric charges. They are going for the presidents heart and trying to shock it into cardiac arrest. You have been chosen
-to go in and stop them from reaching the heart at any cost. The president was injected in the calf so the scientists have cut off
-blood flow to slow them down and are going to shrink you down so you can man the SCOOTY PUFF JUNIOR and inject you straight into
-his chest. This ship has the firepower to destroy any enemy ship but is also fragile itself so one hit and you are done. Gods Speed.
+The story is that you need to find the location of the terrosit group before they go out with their plans
+to destroy the city. You must collect data in cyber space and put the pieces together. 
 </li>
 
 <li><strong>Target Audience:</strong>
-The demographic is honestly anyone that appeals to arcade shooters and or secret missions
+The demographic is honestly anyone that appeals to arcade games/ collecting
 </li>
 
 <li><strong>Play time:</strong>
-1-2 mins tops
+until i put in a timer/enemies it can be played forever
 </li>
 
 <li><strong>Strategies:</strong>
-until i implement the movement of up and back as well as left to right the only strategy is to dodge left and right and inbetween dodges shoot the enemy
+if you play for a set amount of time the best strategy is to keep towards the middle when you pick up a objective
+because the next one will spawn at random so being close to the middle is equal distant from each side.
 </li>
 
 <li><strong>Prototype Assets:</strong>
-I borrowed some from the example assets on the phaser site and others on devinart and some made myself
+I borrowed some from the example assets on the phaser site and others on devinart and some made myself I also used
+one from the sprite database
 </li>
 
 <li><strong>Prototype Closest Other Game:</strong>
-My game most represents the invaders example on phaser. I used the same framework for enemy movement but changed assets
-and lives system, etc.
+My game most represents the generic platformer type example from phaser but i made it so theres no gravity
+and you can move in any direction.
 </li>
 
 </ul>
