--- a/index.html
+++ b/index.html
@@ -87,7 +87,12 @@ one from the sprite database
 My game most represents the generic platformer type example from phaser but i made it so theres no gravity
 and you can move in any direction.
 </li>
-
+<li><strong>Changes made to the game:</strong>
+Since the last installment I have added some extra features to the game. It seemed to be a little too easy
+to kill the enemy and gain infinite tokens for unlimited points. To change this i have installed faster enemies
+and you do have the option to kill the enemies at a massive point reduction. I added a second enemy as well and the
+ability for them to run off screen so they pick up speed and come at different angles to surprise the player.
+</li>
 </ul>
 </div>
 </body>
